--- a/8tut/style.css
+++ b/8tut/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    block-size: border-box;
+    box-sizing: border-box;
     font-family: gilroy;
 }
 
@@ -9,5 +9,87 @@ html,
 body {
     height: 100%;
     width: 100%;
-    background-color: #111;
+    overflow: hidden;
+}
+
+section {
+    min-height: 100%;
+    width: 100%;
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 50px;
+}
+
+.part2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+}
+
+nav h1 {
+    font-size: 50px;
+}
+
+nav h1 i {
+    rotate: 45deg;
+    display: inline-block;
+    font-size: 50px;
+}
+
+nav h4 {
+    font-size: 28px;
+    font-weight: 500;
+}
+
+nav button {
+    padding: 22px 40px;
+    background-color: transparent;
+    font-size: 22px;
+    font-weight: 600;
+    background-repeat: 5px;
+    border: 2px solid black;
+}
+
+.center {
+    padding: 50px;
+    width: 100%;
+    display: flex;
+}
+
+.center-part1 {
+    height: 100%;
+    width: 44%;
+}
+
+.center-part1 h1 {
+    line-height: 1.2;
+    font-size: 60px;
+    font-family: monospace; 
+}
+
+.center-part1 p {
+    font-size: 20px;
+    width: 95%; 
+    margin-top: 10px;
+    margin-bottom: 35px;
+}
+
+.center-part1 button {
+    background-color: black;
+    color: aliceblue;
+    border-radius: 10px;
+    padding: 22px 40px;
+    font-size: 25px;
+    font-weight: 600;
+    border: none;
+}
+
+.center-part2 {
+    height: 100%;
+    width: 56%;
 }
